# djpoetryboilerplate

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt  setup.cfg
apps/common/: urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
